syntax = "proto3";

option go_package = "pkg/grpc";

service Telega {
	rpc SendMsg(MessageInfo) returns (None);
}

message MessageInfo {
	string ChatId = 1;
	string Text = 2;
}

message None {}
